...
                                ],
                              ),
                              new Row(children: <Widget>[
                                Expanded(
                                    child: Text(
                                        '1 $_unit of $_product costs UGX ${(rate ?? 0).toStringAsFixed(0)}',
                                        key: Key('rate'),
                                        textAlign: TextAlign.right)),
                                _isConverting
                                    ? new IconButton(
                                        icon: Icon(Icons.close),
                                        onPressed: () {
                                          if (mounted)
...
                                  : Container(width: 0, height: 0),
                              new Row(
                                mainAxisAlignment: MainAxisAlignment.center,
                                children: <Widget>[
                                  //Expanded(child: Container()),
                                  MaterialButton(
                                    key: Key('request'),
                                    //) RaisedButton(
                                    //disabledColor:Colors.lightBlue,
                                    color: Theme.of(context).primaryColor,
                                    onPressed: _isConverting || _forexError
                                        ? null
                                        : () {
...
                    //Divider(),
                  ])
                : Container(width: 0, height: 0);
          } else {
            return Padding(
                padding: EdgeInsets.all(16),
                child: Text('No requested deliveries'));
          }
        },
      ),
      _buildInTransit(),
      InkWell(
          child: Row(
...
